[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the Apply Block component.

--- a/themes/elucid/components/Makefile
+++ b/themes/elucid/components/Makefile
@@ -2,7 +2,10 @@
 # extension) to translate the EcmaScript 5 source
 # files into browser compatible JavaScript.
 
-all: vehicles
+all: apply_block vehicles
+
+apply_block:
+	$(MAKE) -C apply_block
 
 vehicles:
 	$(MAKE) -C vehicles
