--- a/themes/elucid/elucid.libraries.yml
+++ b/themes/elucid/elucid.libraries.yml
@@ -5,6 +5,7 @@ base:
     node_modules/material-components-web/dist/material-components-web.min.js: {}
     libs/react/react.production.min.js: {}
     libs/react/react-dom.production.min.js: {}
+    components/apply_block/js/apply_block.js: {}
     components/vehicles/js/vehicles.js: {}
     js/elucid.js: {}
     js/accordion.js: {}
