[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the Homepage Hero component.

--- a/themes/elucid/components/Makefile
+++ b/themes/elucid/components/Makefile
@@ -2,10 +2,13 @@
 # extension) to translate the EcmaScript 5 source
 # files into browser compatible JavaScript.
 
-all: apply_block vehicles
+all: apply_block hero vehicles
 
 apply_block:
 	$(MAKE) -C apply_block
+
+hero:
+	$(MAKE) -C hero
 
 vehicles:
 	$(MAKE) -C vehicles
