--- a/themes/elucid/elucid.libraries.yml
+++ b/themes/elucid/elucid.libraries.yml
@@ -6,6 +6,7 @@ base:
     libs/react/react.production.min.js: {}
     libs/react/react-dom.production.min.js: {}
     components/apply_block/js/apply_block.js: {}
+    components/hero/js/hero.js: {}
     components/vehicles/js/vehicles.js: {}
     js/elucid.js: {}
     js/accordion.js: {}
