[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the Clients block.

--- a/themes/elucid/components/Makefile
+++ b/themes/elucid/components/Makefile
@@ -2,10 +2,13 @@
 # extension) to translate the EcmaScript 5 source
 # files into browser compatible JavaScript.
 
-all: apply_block hero services vehicles
+all: apply_block clients hero services vehicles
 
 apply_block:
 	$(MAKE) -C apply_block
+
+clients:
+	$(MAKE) -C clients
 
 hero:
 	$(MAKE) -C hero
