[Nolij: Website Project: Draft Homepage Webcomponents Using React Task] Drafted the home page Connect block component, added the video background for the hero block, added the client logos to the clients block, added submit code to the Contact Message block component, and added the Contact Message REST module

--- a/themes/elucid/components/Makefile
+++ b/themes/elucid/components/Makefile
@@ -2,13 +2,16 @@
 # extension) to translate the EcmaScript 5 source
 # files into browser compatible JavaScript.
 
-all: apply_block clients hero services vehicles
+all: apply_block clients connect hero services vehicles
 
 apply_block:
 	$(MAKE) -C apply_block
 
 clients:
 	$(MAKE) -C clients
+
+connect:
+	$(MAKE) -C connect
 
 hero:
 	$(MAKE) -C hero
